Right-align top bar auth links

--- a/static/css/hn.css
+++ b/static/css/hn.css
@@ -34,8 +34,15 @@ a:hover {
 .hn-bar {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     max-width: 980px;
     margin: 0 auto;
+    gap: 10px;
+}
+
+.hn-left {
+    display: flex;
+    align-items: center;
     gap: 10px;
 }
 
@@ -197,6 +204,6 @@ a:hover {
 
     .hn-nav {
         width: 100%;
-        justify-content: flex-start;
+        justify-content: flex-end;
     }
 }
