--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,11 @@
 <body>
     <header class="hn-header">
         <div class="hn-bar">
-            <a class="hn-logo" href="/">Φ</a>
-            <div class="hn-title">
-                <a href="/">Philosofriends</a>
+            <div class="hn-left">
+                <a class="hn-logo" href="/">Φ</a>
+                <div class="hn-title">
+                    <a href="/">Philosofriends</a>
+                </div>
             </div>
             <nav class="hn-nav">
                 <a href="/submit/">submit</a>
