Show comment count on list

--- a/templates/questions/question_list.html
+++ b/templates/questions/question_list.html
@@ -10,7 +10,7 @@
                     <a href="{% url 'question_detail' question.pk %}">{{ question.title }}</a>
                 </div>
                 <div class="hn-item-meta">
-                    asked by {{ question.author.username }} · {{ question.created_at|date:"M j, Y" }}
+                    asked by {{ question.author.username }} · {{ question.created_at|date:"M j, Y" }} · {{ question.comments.count }} comments
                 </div>
             </li>
         {% empty %}
