--- a/templates/questions/question_detail.html
+++ b/templates/questions/question_detail.html
@@ -55,7 +55,7 @@
             </form>
         {% else %}
             <p class="hn-body hn-muted">
-                <a href="/accounts/login/?next=/questions/{{ question.pk }}/">Log in</a> to post a comment.
+                <a href="/accounts/login/?next=/questions/{{ question.slug }}/">Log in</a> to post a comment.
             </p>
         {% endif %}
     </section>
