--- a/templates/questions/_comment.html
+++ b/templates/questions/_comment.html
@@ -1,6 +1,11 @@
 <li class="hn-comment">
     <div class="hn-comment-meta">{{ comment.author.username }} · {{ comment.created_at|date:"M j, Y" }}</div>
     <div class="hn-comment-body">{{ comment.body|linebreaksbr }}</div>
+    {% if user.is_authenticated %}
+        <div class="hn-comment-actions">
+            <button class="hn-reply-button" type="button" data-comment-id="{{ comment.id }}" data-comment-author="{{ comment.author.username }}">Reply</button>
+        </div>
+    {% endif %}
     {% if comment.children %}
         <ul class="hn-comment-children">
             {% for child in comment.children %}
