--- a/templates/questions/question_detail.html
+++ b/templates/questions/question_detail.html
@@ -25,15 +25,7 @@
         </div>
         {% if question.link %}
             <p class="hn-body">
-                <a href="{{ question.link }}" rel="noopener noreferrer" target="_blank">
-                    {{ question.link }}
-                    <span class="hn-link-icon" aria-hidden="true">
-                        <svg viewBox="0 0 16 16" focusable="false">
-                            <path d="M6 3h7v7M13 3L6 10" />
-                            <path d="M13 9v4H3V3h4" />
-                        </svg>
-                    </span>
-                </a>
+                <a href="{{ question.link }}" rel="noopener noreferrer" target="_blank">{{ question.link }}</a>
             </p>
         {% endif %}
         {% if question.body %}
