Add new sort link

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
             </div>
             <nav class="hn-nav hn-nav-left">
                 <a class="hn-submit" href="/submit/">submit</a>
+                <span class="hn-sep">|</span>
+                <a class="hn-submit" href="/?sort=new">new</a>
             </nav>
             <div class="hn-spacer"></div>
             <nav class="hn-nav hn-nav-right">
