--- a/templates/questions/question_detail.html
+++ b/templates/questions/question_detail.html
@@ -26,11 +26,11 @@
                     {% csrf_token %}
                     <input type="hidden" name="next" value="{{ request.get_full_path }}">
                     <button class="hn-vote-button {% if user_has_voted %}hn-vote-active{% endif %}" type="submit" aria-label="Upvote">
-                        ▲
+                        up
                     </button>
                 </form>
             {% else %}
-                <div class="hn-vote-placeholder">▲</div>
+                <div class="hn-vote-placeholder">up</div>
             {% endif %}
             <div class="hn-vote-count">{{ question.score|default:0 }} point{{ question.score|pluralize }}</div>
         </div>
