Add reply collapse toggle for comment threads

--- a/templates/questions/_comment.html
+++ b/templates/questions/_comment.html
@@ -1,5 +1,10 @@
 <li class="hn-comment">
-    <div class="hn-comment-meta">{{ comment.author.username }} · {{ comment.created_at|date:"M j, Y" }}</div>
+    <div class="hn-comment-meta">
+        {% if comment.children %}
+            <button class="hn-reply-toggle" type="button" aria-expanded="true" aria-label="Collapse replies">−</button>
+        {% endif %}
+        {{ comment.author.username }} · {{ comment.created_at|date:"M j, Y" }}
+    </div>
     <div class="hn-comment-body">{{ comment.body|linebreaksbr }}</div>
     {% if user.is_authenticated %}
         <div class="hn-comment-actions">
@@ -7,7 +12,7 @@
         </div>
     {% endif %}
     {% if comment.children %}
-        <ul class="hn-comment-children">
+        <ul class="hn-comment-children" data-collapsible="true">
             {% for child in comment.children %}
                 {% include "questions/_comment.html" with comment=child %}
             {% endfor %}
